<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/onboarding_fragment"
    android:id="@+id/nav_graph">

    <fragment
        android:id="@+id/onboarding_fragment"
        android:name="ru.coralcode.arty.ui.onboarding.OnboardingFragment"
        android:label="@string/onboarding_fragment">

        <action
            android:id="@+id/action_onboarding_to_home"
            app:destination="@id/home_fragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"
            />

    </fragment>

    <fragment
        android:id="@+id/home_fragment"
        android:name="ru.coralcode.arty.ui.home.HomeFragment"
        android:label="@string/home_fragment"
        />

    <fragment
        android:id="@+id/settings_fragment"
        android:name="ru.coralcode.arty.ui.settings.SettingsFragment"
        android:label="@string/settings_fragment"
        />


    <activity
        android:name="ru.coralcode.arty.MainActivity"
        android:label="@string/main_activity"
        android:id="@+id/main_activity"/>
</navigation>