<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_black"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_powered_by"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/artists_and_artworks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/artworks_in_your_pocket"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@id/btn_take_a_look"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"/>


    <Button
        android:id="@+id/btn_take_a_look"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/take_a_look"
        android:textAllCaps="false"
        android:layout_margin="30dp"
        android:background="@drawable/main_button_shape"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_bold"/>






</androidx.constraintlayout.widget.ConstraintLayout>