<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/settings"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Theme"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_settings" />

    <ru.coralcode.arty.ui.views.CoolArrow
        android:id="@+id/cool_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_theme" />

    <TextView
        android:id="@+id/tv_theme_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/theme_light"
        android:textSize="16sp"
        android:visibility="gone"
        app:drawableEndCompat="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_theme" />

    <TextView
        android:id="@+id/tv_theme_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/theme_dark"
        android:textSize="16sp"
        android:visibility="gone"
        app:drawableEndCompat="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_theme_light" />

    <TextView
        android:id="@+id/tv_theme_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/theme_system"
        android:textSize="16sp"
        android:visibility="gone"
        app:drawableEndCompat="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_theme_dark" />

    <TextView
        android:id="@+id/tv_cache_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/cache_images"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_cache"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_theme_system" />

    <TextView
        android:id="@+id/tv_painting_of_the_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/painting_of_the_day"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/iv_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_cache_images" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_image"
        app:layout_constraintBottom_toBottomOf="@id/tv_painting_of_the_day_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_painting_of_the_day"/>

    <TextView
        android:id="@+id/tv_painting_of_the_day_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/painting_of_the_day_description"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_painting_of_the_day"
        app:layout_constraintTop_toBottomOf="@id/tv_painting_of_the_day" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_painting_of_the_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_painting_of_the_day"
        app:layout_constraintBottom_toBottomOf="@id/tv_painting_of_the_day_description"
        android:layout_marginEnd="16dp"
        app:trackTint="@color/switch_track_selector"
        app:thumbTint="@color/switch_thumb_selector"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_visit_museum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Visit artic.edu"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/iv_visit_museum"
        app:layout_constraintTop_toBottomOf="@+id/tv_painting_of_the_day_description" />

    <ImageView
        android:id="@+id/iv_visit_museum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_visit_artic"
        app:layout_constraintBottom_toBottomOf="@id/tv_visit_museum_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_visit_museum"/>

    <TextView
        android:id="@+id/tv_visit_museum_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/visit_artic_description"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_visit_museum"
        app:layout_constraintTop_toBottomOf="@id/tv_visit_museum" />



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/quote_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/main_pink"
        app:strokeWidth="3dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:padding="20dp"
            android:text="@string/card_quote"
            android:textAlignment="center"
            android:textSize="18sp" />

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>